@startuml
'https://plantuml.com/class-diagram
abstract Nut{
    int giaTri
    + void duyet()
    + void themTrai(Nut n)
    + void themPhai(Nut n)
    + void xoaTrai()
    + void xoaPhai()
}

class NutLa

class NutTrong

Nut <|-- NutLa
Nut <|-- NutTrong
NutTrong --> Nut: Trai
NutTrong --> Nut: Phai

@enduml